gccida/c3/parse_float
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_float/src/c-lex.c:1218:31: error: use of undeclared identifier 'machine_mode'
ereal_atof( &v4, args->str, ( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( args->type->block.abstract_origin)) >> 1)); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_float/src/c-lex.c:1224:31: error: use of undeclared identifier 'machine_mode'
ereal_atof( &v3, args->str, ( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( args->type->block.abstract_origin)) >> 1)); 
                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/parse_float/src/obj/c-lex.o] Error 1
